Add should_i_walk functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ mock
 # ----------------------
 gevent
 gunicorn
+
+# ----------------------
+# Application
+# ----------------------
+https://launchpad.net/python-weather-api/trunk/0.3.8/+download/pywapi-0.3.8.tar.gz
